# Voice-Fraud-Detection-with-RAG

./: .env.example  .gitignore  README.md  app.py  config.py  logic.py  models.py  pyproject.toml  rag_data.txt
